--- a/day1.html
+++ b/day1.html
@@ -276,19 +276,19 @@
     <p class="date">February 7, 2026</p>
     
     <div class="letter-text">
-        <p style="margin-bottom: 20px;">My dearest love,</p>
-        <p style="margin-bottom: 20px;">Just like this rose blooms with beauty, my love for you grows stronger every single day. Today marks the beginning of our special week, and I want you to know that you are the most precious person in my life.</p>
-        <p style="margin-bottom: 20px;">Every moment with you feels like a dream come true. Your smile lights up my world, and your laughter is my favorite melody. You've brought so much color and joy into my life, just like a beautiful garden of roses.</p>
+        <p style="margin-bottom: 20px;">My dearest Mishiii,</p>
+        <p style="margin-bottom: 20px;">Just like the rose blooms with beauty as time passes by, I fall in love with you more as each second passes by. You're as pretty as all the roses combined, no, you're prettier than all of them.. This is the beginning of our special week, and I want you to know that you are extremely precious to me, my blossom. </p>
+        <p style="margin-bottom: 20px;">Every moment with you feels like a dream come true. Your smile lights up my world, and your laughter anf voice is my favorite melody. You've brought so much color and joy into my life, just like a beautiful garden of roses. The last 3 days of this week are gonna be special for you.. but you'll have to be patient as each day passes by and you unravel this surprise; I hope you'll love it.</p>
     </div>
 
     <div class="photo-collage">
         <div class="photo-item">
             <img src="images/rose-day-1.jpg" alt="Our Memory 1" onerror="this.src='https://via.placeholder.com/400x300/ff6b9d/ffffff?text=rose-day-1.jpg'">
-            <div class="photo-caption">Our first date 💕</div>
+            <div class="photo-caption">Our first date 💗</div>
         </div>
         <div class="photo-item">
             <img src="images/rose-day-2.jpg" alt="Our Memory 2" onerror="this.src='https://via.placeholder.com/400x300/ffc2d1/ffffff?text=rose-day-2.jpg'">
-            <div class="photo-caption">When you smiled at me ✨</div>
+            <div class="photo-caption">When you smiled at me 🫠</div>
         </div>
         <div class="photo-item">
             <img src="images/rose-day-3.jpg" alt="Our Memory 3" onerror="this.src='https://via.placeholder.com/400x300/e5d4ed/ffffff?text=rose-day-3.jpg'">
@@ -297,7 +297,7 @@
     </div>
 
     <div style="text-align: center; margin: 40px 0;">
-        <a href="#surprise" class="surprise-btn">🌹 Do you want a surprise? 🌹</a>
+        <a href="#surprise" class="surprise-btn">Do you want a surprise??</a>
     </div>
 
     <div style="text-align: center; margin-top: 50px;">
