--- a/day2.html
+++ b/day2.html
@@ -206,14 +206,14 @@
     
     <div class="letter-text">
         <p style="margin-bottom: 20px;">My beautiful soulmate,</p>
-        <p style="margin-bottom: 20px;">Every day I choose you. Every day I fall in love with you all over again. You make my heart skip a beat, and being with you feels like coming home.</p>
-        <p style="margin-bottom: 30px;">From the moment I met you, I knew you were special. And now, I can't imagine my life without you in it. You complete me in ways I never knew were possible.</p>
+        <p style="margin-bottom: 20px;">Every day I think about you.. Every day I fall in love with you all over again. You make my heart skip a beat, and being with you feels like home. As each second passes by, I fall in love with you even more.. and there are even times when you just make me go AAAAHHHHHHHHHHHHHH and I can't help but smile at my screen like an idiot.. you're the sweetesttt and I loveeee youuuu soooo muchhhh, Mishiii.. </p>
+        <p style="margin-bottom: 30px;">From the time when we were bestfriends, you were special to me. And now, I can't imagine my life without you in it. You complete me in ways I never knew were possible. I can't even think how my life would be without you in it..</p>
     </div>
 
     <div class="photo-collage">
         <div class="photo-item">
             <img src="images/propose-day-1.jpg" alt="Proposal Memory 1" onerror="this.src='https://via.placeholder.com/400x300/ff6b9d/ffffff?text=propose-day-1.jpg'">
-            <div class="photo-caption">The day I knew 💍</div>
+            <div class="photo-caption">The day I knew </div>
         </div>
         <div class="photo-item">
             <img src="images/propose-day-2.jpg" alt="Proposal Memory 2" onerror="this.src='https://via.placeholder.com/400x300/ffc2d1/ffffff?text=propose-day-2.jpg'">
@@ -222,10 +222,8 @@
     </div>
 
     <div class="yesno-container">
-        <h3>Will you continue to be mine, today, tomorrow, and forever? 💕</h3>
-        <div class="gif-container">
-            <img src="images/propose-day-gif.gif" alt="Proposal" onerror="this.src='https://media.giphy.com/media/3o7qE1YN7aBOFPRw8E/giphy.gif'">
-        </div>
+        <h3>Will you continue to be mine, today, tomorrow, and forever, Mishi?</h3>
+        
         <div class="yesno-buttons">
             <a href="#yes" class="yes-btn">YES! 💕</a>
             <a href="#no" class="no-btn">No</a>
@@ -233,12 +231,12 @@
     </div>
 
     <div style="text-align: center; margin-top: 50px;">
-        <p style="font-size: 1.5rem; font-style: italic; color: var(--deep-pink);">Always and forever,<br>Your Forever Person 💍</p>
+        <p style="font-size: 1.5rem; font-style: italic; color: var(--deep-pink);">Always and forever,<br>Your Forever Person </p>
     </div>
 </div>
 
 <audio autoplay loop>
-    <source src="music/propose-day-music.mp3" type="audio/mpeg">
+    <source src="music/propose-day-music.mp3" type="audio/mp3">
 </audio>
 ```
 
