--- a/day1.html
+++ b/day1.html
@@ -283,15 +283,15 @@
 
     <div class="photo-collage">
         <div class="photo-item">
-            <img src="images/rose-day-1.jpg" alt="Our Memory 1" onerror="this.src='https://via.placeholder.com/400x300/ff6b9d/ffffff?text=rose-day-1.jpg'">
+            <img src="images/rose-day-1.jpg.JPG" alt="Our Memory 1" onerror="this.src='https://via.placeholder.com/400x300/ff6b9d/ffffff?text=rose-day-1.jpg'">
             <div class="photo-caption">Our first date 💗</div>
         </div>
         <div class="photo-item">
-            <img src="images/rose-day-2.jpg" alt="Our Memory 2" onerror="this.src='https://via.placeholder.com/400x300/ffc2d1/ffffff?text=rose-day-2.jpg'">
+            <img src="images/rose-day-2.jpg.PNG" alt="Our Memory 2" onerror="this.src='https://via.placeholder.com/400x300/ffc2d1/ffffff?text=rose-day-2.jpg'">
             <div class="photo-caption">When you smiled at me 🫠</div>
         </div>
         <div class="photo-item">
-            <img src="images/rose-day-3.jpg" alt="Our Memory 3" onerror="this.src='https://via.placeholder.com/400x300/e5d4ed/ffffff?text=rose-day-3.jpg'">
+            <img src="images/rose-day-3.jpg.heic" alt="Our Memory 3" onerror="this.src='https://via.placeholder.com/400x300/e5d4ed/ffffff?text=rose-day-3.jpg'">
             <div class="photo-caption">Perfect moment 🌹</div>
         </div>
     </div>
