--- a/day2.html
+++ b/day2.html
@@ -212,11 +212,11 @@
 
     <div class="photo-collage">
         <div class="photo-item">
-            <img src="images/propose-day-1.jpg" alt="Proposal Memory 1" onerror="this.src='https://via.placeholder.com/400x300/ff6b9d/ffffff?text=propose-day-1.jpg'">
+            <img src="images/propose-day-1.jpg.jpg" alt="Proposal Memory 1" onerror="this.src='https://via.placeholder.com/400x300/ff6b9d/ffffff?text=propose-day-1.jpg'">
             <div class="photo-caption">The day I knew </div>
         </div>
         <div class="photo-item">
-            <img src="images/propose-day-2.jpg" alt="Proposal Memory 2" onerror="this.src='https://via.placeholder.com/400x300/ffc2d1/ffffff?text=propose-day-2.jpg'">
+            <img src="images/propose-day-2.jpg.jpg" alt="Proposal Memory 2" onerror="this.src='https://via.placeholder.com/400x300/ffc2d1/ffffff?text=propose-day-2.jpg'">
             <div class="photo-caption">You said yes! 💕</div>
         </div>
     </div>
