--- a/day1.html
+++ b/day1.html
@@ -310,7 +310,7 @@
     <div class="modal-content">
         <a href="#" class="close-modal">&times;</a>
         <h3>Do you accept this rose? 🌹</h3>
-        <img src="images/surprise-rose-photo.jpg" alt="Me with Rose" onerror="this.src='https://via.placeholder.com/500x600/ff6b9d/ffffff?text=surprise-rose-photo.jpg'">
+        <img src="images/surprise-rose-photo.jpg.JPG" alt="Me with Rose" onerror="this.src='https://via.placeholder.com/500x600/ff6b9d/ffffff?text=surprise-rose-photo.jpg'">
         <div class="yesno-buttons">
             <a href="#accepted" class="yes-btn">YES! 💕</a>
             <a href="#" class="no-btn">No</a>
