--- a/day1.html
+++ b/day1.html
@@ -291,7 +291,7 @@
             <div class="photo-caption">Your mere gaze makes me a little kid again 🫠</div>
         </div>
         <div class="photo-item">
-            <img src="images/rose-day-3.jpg.heic" alt="Our Memory 3" onerror="this.src='https://via.placeholder.com/400x300/e5d4ed/ffffff?text=rose-day-3.jpg'">
+            <img src="images/rose-day-3.jpg.jpg" alt="Our Memory 3" onerror="this.src='https://via.placeholder.com/400x300/e5d4ed/ffffff?text=rose-day-3.jpg'">
             <div class="photo-caption"> A Time to Remember🌹</div>
         </div>
     </div>
