--- a/day2.html
+++ b/day2.html
@@ -207,7 +207,7 @@
     <div class="letter-text">
         <p style="margin-bottom: 20px;">My beautiful soulmate,</p>
         <p style="margin-bottom: 20px;">Every day I think about you.. Every day I fall in love with you all over again. You make my heart skip a beat, and being with you feels like home. As each second passes by, I fall in love with you even more.. and there are even times when you just make me go AAAAHHHHHHHHHHHHHH and I can't help but smile at my screen like an idiot.. you're the sweetesttt and I loveeee youuuu soooo muchhhh, Mishiii.. </p>
-        <p style="margin-bottom: 30px;">From the time when we were bestfriends, you were special to me. And now, I can't imagine my life without you in it. You complete me in ways I never knew were possible. I can't even think how my life would be without you in it..</p>
+        <p style="margin-bottom: 30px;">From the time when we were bestfriends, you were special to me. And now, I can imagine my life without you in it. You complete me in ways I never knew were possible. I can't even think how my life would be without you in it..</p>
     </div>
 
     <div class="photo-collage">
