--- a/day1.html
+++ b/day1.html
@@ -277,7 +277,7 @@
     
     <div class="letter-text">
         <p style="margin-bottom: 20px;">My dearest Mishiii,</p>
-        <p style="margin-bottom: 20px;">Just like the rose blooms with beauty as time pass by, I fall in love with you more as each second pass by. You're as pretty as all the roses combined, no, you're prettier than all of them.. This is the beginning of our special week, and I want you to know that you are extremely precious to me, my bossom. </p>
+        <p style="margin-bottom: 20px;">Just like the rose blooms with beauty as time pass by, I fall in love with you more as each second pass by. You're as pretty as all the roses combined, no, you're prettier than all of them.. This is the beginning of our special week, and I want you to know that you are extremely precious to me, my blossom. </p>
         <p style="margin-bottom: 20px;">Every moment with you feels like a dream come true. Your smile lights up my world, and your laughter and voice is my favorite melody. You've brought so much colour and joy into my life, just like a beautiful garden of roses. The last 3 days of this week are gonna be special for you.. but you'll have to be patient as each day passes by and you unravel this surprise; I hope you'll love it.</p>
     </div>
 
